fix: nightly release notes

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -202,4 +202,4 @@ jobs:
           files: |
             ${{ github.workspace }}/temp/*
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
