--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -166,15 +166,12 @@
         <receiver
             android:name=".core.broadcast.RestartReceiver"
             android:enabled="true"
-            android:exported="false"
-			android:directBootAware="true">
+            android:exported="false">
             <intent-filter>
-				<action android:name="android.intent.action.SCREEN_ON" />
 				<action android:name="android.intent.action.USER_PRESENT" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
                 <action android:name="com.htc.intent.action.QUICKBOOT_POWERON" />
-				<action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
 				<action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
             </intent-filter>
         </receiver>
